Update Code in blog.html

--- a/Code in blog.html
+++ b/Code in blog.html
@@ -10,8 +10,7 @@
 -----------------------------------------------
 Blogger Template Style
 Name:     Awesome Inc.
-Designer: Tina Chen
-URL:      tinachen.org
+Designer: ***********
 ----------------------------------------------- */
 
 /* Variable definitions
